--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hello Coursera! My name is Ahmad Syamsudin, My student ID: 192910701108</title>
+	<title>Hello Coursera! </title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+<h1>Hello Coursera! My name is Ahmad Syamsudin, My student ID: 192910701108</h1>
 </body>
 </html>
