Add new sentence

--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <h1>Hello Coursera! My name is Ahmad Syamsudin, My student ID: 192910701108</h1>
+<h2>This is my first web page.</h2>
 </body>
 </html>
